repositories/stable/dex/0.2.0/README.md
# `@helm-charts/stable-dex`

CoreOS Dex

| Field               | Value  |
| ------------------- | ------ |
| Repository Name     | stable |
| Chart Name          | dex    |
| Chart Version       | 0.2.0  |
| NPM Package Version | 0.1.0  |

<details>

<summary>Helm chart `values.yaml` (default values)</summary>

```yaml
# Default values for dex
# This is a YAML-formatted file.
# Declare name/value pairs to be passed into your templates.
# name: value

image: quay.io/coreos/dex
imageTag: 'v2.10.0'
imagePullPolicy: 'IfNotPresent'

inMiniKube: false

nodeSelector: {}

replicas: 1

# resources:
# limits:
# cpu: 100m
# memory: 50Mi
# requests:
# cpu: 100m
# memory: 50Mi

ports:
  - name: http
    containerPort: 8080
    protocol: TCP
  - name: grpc
    containerPort: 5000
    protocol: TCP

service:
  type: ClusterIP
  annotations: {}

extraVolumes: []
extraVolumeMounts: []

certs:
  image: gcr.io/google_containers/kubernetes-dashboard-init-amd64
  imageTag: 'v1.0.0'
  imagePullPolicy: 'IfNotPresent'
  web:
    create: true
    activeDeadlineSeconds: 300
    caDays: 10000
    certDays: 10000
    altNames:
      - dex.io
    altIPs: {}
    secret:
      tlsName: dex-web-server-tls
      caName: dex-web-server-ca
  grpc:
    create: true
    activeDeadlineSeconds: 300
    altNames:
      - dex.io
    altIPs: {}
    secret:
      serverTlsName: dex-grpc-server-tls
      clientTlsName: dex-grpc-client-tls
      caName: dex-grpc-ca

env: []

rbac:
  # Specifies whether RBAC resources should be created
  create: true

serviceAccount:
  # Specifies whether a ServiceAccount should be created
  create: true
  # The name of the ServiceAccount to use.
  # If not set and create is true, a name is generated using the fullname template
  name:

config:
  issuer: https://dex.io
  storage:
    type: kubernetes
    config:
      inCluster: true
  logger:
    level: debug
  web:
    http: 0.0.0.0:8080
  #   tlsCert: /etc/dex/tls/https/server/tls.crt
  #   tlsKey: /etc/dex/tls/https/server/tls.key
  grpc:
    addr: 0.0.0.0:5000
    tlsCert: /etc/dex/tls/grpc/server/tls.crt
    tlsKey: /etc/dex/tls/grpc/server/tls.key
    tlsClientCA: /etc/dex/tls/grpc/ca/tls.crt
  connectors:
  #  - type: github
  #    id: github
  #    name: GitHub
  #    config:
  #      clientID: xxxxxxxxxxxxxxx
  #      clientSecret: yyyyyyyyyyyyyyyyyyyyy
  #      redirectURI: https://dex.minikube.local:5556/callback
  #      org: kubernetes
  oauth2:
    skipApprovalScreen: true

  #  staticClients:
  #  - id: example-app
  #    redirectURIs:
  #    - 'http://192.168.42.219:31850/oauth2/callback'
  #    name: 'Example App'
  #    secret: ZXhhbXBsZS1hcHAtc2VjcmV0
  #
  enablePasswordDB: true
# staticPasswords:
#  - email: "admin@example.com"
#    # bcrypt hash of the string "password"
#    hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W"
#    username: "admin"
#    userID: "08a8684b-db88-4b73-90a9-3cd1661f5466"
```

</details>
